[package]
name = "build-bpf"
version = "0.1.0"
edition = "2021"
authors = ["Will <edant.io@protonmail.com>"]
repository = "https://github.com/e-dant/build-bpf"
readme = "https://github.com/e-dant/build-bpf/blob/release/readme.md"
homepage = "https://github.com/e-dant/build-bpf"
documentation = "https://github.com/e-dant/build-bpf"
license = "MIT"

[dependencies]
libbpf-cargo = "0.23"
